# llmops-dashboard

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEBT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROJECT.md  onboarding.md  runbook.md  schema_versioning.md
examples/: README.md  dummy_traced_app.py
infra/: docker-compose.langfuse.yml
infra/terraform/: README.md
src/llmops_dashboard/: __init__.py  config.py
src/llmops_dashboard/ab_testing/: __init__.py  router.py
src/llmops_dashboard/alerting/: __init__.py  __main__.py  engine.py  notifiers.py  rules.py  rules.yaml
src/llmops_dashboard/eval/: __init__.py  multi_model_compare.py
src/llmops_dashboard/eval/datasets/: README.md
src/llmops_dashboard/instrumentation/: __init__.py  client.py  schema.py  tracer.py
tests/: test_alerting_engine.py  test_alerting_rules.py  test_schema.py  test_smoke.py  test_tracer.py
